# Montage

./: .gitignore  CONTRIBUTING.md  ChangeHistory  Jenkinsfile  LICENSE  Makefile  README  README.md  README.release  config.make  configure
HiPS/: Makefile  Notes.txt
Montage/: Makefile  Makefile.Darwin  Makefile.LINUX  Makefile.SunOS  checkHdr.c  checkWCS.c  debugCheck.c  filePath.h  get_files.c  get_hdr.c  get_hfiles.c  hdr_rec.h  mAdd.c  mAddCube.c  mAddExec.c  mBackground.c  mBgExec.c  mBgModel.c  mConvert.c  mCoverageCheck.c  mDiff.c  mDiffExec.c  mDiffFitExec.c  mFitExec.c  mFitplane.c  mFlattenExec.c  mGetHdr.c  mHdrCheck.c  mHdrtbl.c  mImgtbl.c  mMakeHdr.c  mMakeImg.c  mNaN.h  mOverlaps.c  mProjExec.c  mProject.c  mProjectCube.c  mProjectPP.c  mPutHdr.c  mShrink.c  (+14 more)
MontageLib/: Makefile  mJupyter.c  mLibDoc.c  montage.h
Python_ManyLinux/: Notes.txt  bashrc  configureDocker.sh  startDocker.sh
Windows/: Notes.txt  configureDocker.sh  fullBuild.sh  startDocker.sh
ancillary/: Makefile
grid/: Makefile
python/MontagePy/: LICENSE  Notes.txt  README.manylinux  README.md  README.txt  __archive__.py  __init__.py  archive.py  check_platform.py  clean.sh  cleanup.py  configure_manylinux.sh  mArchiveDownload.py  mArchiveList.py  make_dev.sh  make_local.sh  make_manylinux.sh  make_osx.sh  parse.py  pyproject.toml  run_manylinux_docker.sh  setup.py  setup_manylinux.py  setup_osx.py  test.sh  validate_json.py
python/MontagePy/MontagePy/: archive.py
python/MontagePy/built_wheels_v2.3.1/: README.md  montagepy-2.3.1-cp310-cp310-macosx_11_0_arm64.whl  montagepy-2.3.1-cp310-cp310-macosx_11_0_x86_64.whl  montagepy-2.3.1-cp311-cp311-macosx_11_0_arm64.whl  montagepy-2.3.1-cp311-cp311-macosx_11_0_x86_64.whl  montagepy-2.3.1-cp312-cp312-macosx_11_0_arm64.whl  montagepy-2.3.1-cp312-cp312-macosx_11_0_x86_64.whl  montagepy-2.3.1-cp313-cp313-macosx_11_0_arm64.whl  montagepy-2.3.1-cp313-cp313-macosx_11_0_x86_64.whl  montagepy-2.3.1-cp39-cp39-macosx_11_0_arm64.whl  montagepy-2.3.1-cp39-cp39-macosx_11_0_x86_64.whl
python/MontagePy/linux_wheels/: README.txt  make.sh  parse.py  pyproject.toml  run.sh  setup.py
python/MontagePy/macos_wheels/: README  README.txt  make.sh  pyproject.toml  run.sh  run_arm64.sh  run_x86_64.sh
python/MontagePy/multi_wheels/: README  make.sh  setup.py
python/MontagePy/templates/: template.pxd  template.pyx  template_main.pyx
(+878 files in other folders)
