[build-system]
requires = ["setuptools>=68.0", "Cython", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MontagePy"
version = "2.0.0"
authors = [
  { name="John Good", email="jcg@caltech.edu" },
]
description = "Montage toolkit for reprojecting, mosaicking, and displaying astronomical images."
readme = "README.txt"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]

[project.urls]
    "Homepage" = "https://github.com/Caltech-IPAC/Montage"
